--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 body {
     text-align: center;
+    background:url("../images/background.jpg") no-repeat center;
+    background-size:cover;
+}
+h1 {
+    margin:0;
+    font-family: 'Lobster', cursive;
+    color:white;
+    font-size:58px;
+    font-weight: normal;
+}
+#score {
+    margin:0 auto -40px auto;
+    width:505px;
+    text-align: right;
 }
