--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ h1 {
     font-size:58px;
     font-weight: normal;
 }
+h2 {
+    font-family: "Book Antiqua";
+    color:white;
+}
 #score {
     margin:0 auto -40px auto;
     width:505px;
